<resources>
    <string name="app_name">Recorder</string>
    <string name="record_list">Recording List</string>
    <string name="settings">Setting</string>
    <string name="earpiece_mode">earpiece_mode</string>
    <string name="earpiece_mode_title">Earpiece Mode</string>
    <string name="earpiece_mode_summary">When turned on, the earpiece will play sound</string>
    <string name="prompt_rename">prompt_rename</string>
    <string name="prompt_rename_title">Recording end prompt rename</string>

    <string name="recording_format">recording_format</string>
    <string name="recording_format_title">Recording Mode</string>
    <string name="version_name">version_name</string>
    <string name="version_name_title">Version Information</string>
    <string name="permission_not_available">Permission not available</string>
    <string name="jump_save_permission">Jump save permission</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="no_record_found">No Record Found</string>
    <string name="record_create_success">Record create success</string>
    <string name="delete_record">Delete record</string>
    <string name="confirm_delete_record">Confirm delete record</string>


    <string name="default_value">AAC</string>
    <array name="format_array_entries">
        <item>AAC</item>
        <item>MP3</item>
        <item>WAV</item>
    </array>
    <string name="get_version_name_fail">Failed to get version number</string>
</resources>